# OvenMediaEngine

./: .gitignore  .travis.yml  Arshlankhan madara  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE robot_builder  Challenge 1  Challenge2.2  Dockerfile  Dockerfile.cuda  Dockerfile.cuda.local  Dockerfile.dev  Dockerfile.local  Dockerfile.niquadra.local  Dockerfile.nonstrip  Dockerfile.nv  Index.html  LICENSE  LICENSE-3RD-PARTY  Muhammad  README.md  Remote File Download  SUMMARY.md  Santhosh  Santhosh1  bubble.md  configuration.md  docker-compose.yml  getting-started.md  hls-mpeg-dash.md  live-source.md  material  origin-edge-clustering.md  p2p-delivery.md  performance-tuning.md  programa  push-publishing.md  recording-experiment.md  (+5 more)
.github/: FUNDING.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  help.md
.github/workflows/: autoFetch.yml  c-cpp.yml  codeql.yml  docker-image-dev-multi.yml  docker-image-release-multi.yml  docker-image-release.yml  docker-image.yml  stale.yml
Docker/: README.md
Docker/ubuntu/: build_images.sh
Docker/ubuntu/ome_base/: Dockerfile  install_ffmpeg.sh  install_libopus.sh  install_libsrtp.sh  install_libvpx.sh  install_openssl.sh
Docker/ubuntu/ome_core/: Dockerfile  app-launcher.sh
api/: ome.yml
docs/: CNAME  README.md  SUMMARY.md  alert.md  configuration.md  crossdomains.md  getting-started.md  index.html  logs-and-statistics.md  origin-edge-clustering.md  ovenmediaengine.service  p2p-delivery.md  performance-tuning.md  prerequisites.sh  push-publishing.md  quick-start.md  recording-experiment.md  recording.md  signedpolicy.md  subtitles.md  test-player.md  thumbnail-experiment.md  thumbnail.md  troubleshooting.md
docs/.gitbook/assets/: data_structure.md
docs/.gitbook/includes/: transcoding-and-adaptive-st....md
docs/access-control/: README.md  admission-webhooks.md  signedpolicy.md
docs/conf_examples/: Applications.xml  Decode.xml  Edge.xml  Encodes.xml  Logger.xml  Origin.xml  Server.xml
docs/configuration/: README.md  ipv6.md  tls-encryption.md
docs/development/: development-using-clion.md
docs/enterprise/: advanced-features.md  install-and-configure.md  introduction.md  release-note.md  web-console.md
docs/getting-started/: README.md  getting-started-with-docker.md  getting-started-with-ome-docker-launcher.md  installing-with-docker.md
docs/live-source/: README.md  mpeg-2-ts-beta.md  multiplex-channel.md  rtmp.md  rtsp-pull-beta.md  rtsp-pull.md  scheduled-channel.md  srt-beta.md  srt.md  webrtc-beta.md  webrtc.md
docs/quick-start/: README.md  test-player.md
docs/rest-api/: README.md
docs/rest-api/v1/: README.md
docs/streaming/: hls-mpeg-dash.md  hls.md  low-latency-hls.md  srt.md  tls-encryption.md  webrtc-publishing.md
docs/subtitles/: README.md  realtime-speech-to-text.md
docs/transcoding/: README.md  abr.md  gpu-usage.md  transcodewebhook.md  transcoding.md
docs/transcoding/gpu-usage/: README.md  manual-installation.md
misc/: generate_signed_policy.py  install_intel_driver.sh  install_nvidia_docker_container.sh  install_nvidia_docker_image.sh  install_nvidia_driver.sh  install_xma3_driver.sh  install_xma_driver.sh  ome_daemon_launcher.sh  ome_docker_launcher.sh  ome_launcher.sh  ovenmediaengine.pp  ovenmediaengine.service  prerequisites.sh  retour.txt  retour2.txt  signed_policy_url_generator.cs  signed_policy_url_generator.java  signed_policy_url_generator.js  signed_policy_url_generator.php  signed_policy_url_generator.sh  simple_signed_policy_url_generator.sh  watch_folder_update_sch.sh  xilinx.plist  xilinx.repo
misc/conf_examples/: DrmInfo.xml  Edge.xml  Logger.xml  Origin.xml  Server.xml  TLS.xml
misc/oven_rtc_tester/: OvenRtcTester.go  go.mod  go.sum  main.go
misc/ovenmedia_policy_generator_golang/: README.md  go.mod  main.go
misc/patches/: ffmpeg_n5.1.4_scte35.patch  ffmpeg_n5.1.4_u30ma.patch
misc/stubs/: Makefile  libcublas.map  libcublasLt.map  libcublasLt_stub.c  libcublas_stub.c  libcuda_stub.c  libcudart.map  libcudart_stub.c  libnppicc_stub.c  libnppig_stub.c  libnvidia-ml_stub.c  libxrt_core_stub.c
rest-api/: README.md
rest-api/v1/data-types/: enums.md  primitives-notations.md
rest-api/v1/virtualhost/: README.md
src/: .clang-format  Makefile  g++  gcc
src/core/: build_dependency.mk  build_executable.mk  build_objects.mk  build_prebuilt_library.mk  build_shared_library.mk  build_static_library.mk  build_sub_ams.mk  clear_variables.mk  colorgcc  colors.mk  config.mk  default_variables.mk  environments.mk  global_config.mk  informations.mk  main.mk  os_version.mk  pre_processing.mk  prepare_to_build.mk  progress.mk  utilities.mk
src/core/examples/: AMS_Executable.mk  AMS_Prebuilt.mk  AMS_Shared.mk  AMS_Static.mk
src/projects/: AMS.mk
src/projects/api_server/: AMS.mk  api_private.h  api_server.cpp  api_server.h
src/projects/base/: base_traits.h  common_types.h  common_video.h
src/projects/cmaf/: AMS.mk  cmaf_application.cpp  cmaf_application.h  cmaf_interceptor.cpp  cmaf_interceptor.h  cmaf_packetyzer.cpp  cmaf_packetyzer.h  cmaf_private.h  cmaf_publisher.cpp  cmaf_publisher.h  cmaf_stream.cpp  cmaf_stream.h  cmaf_stream_packetyzer.cpp  cmaf_stream_packetyzer.h  cmaf_stream_server.cpp  cmaf_stream_server.h
src/projects/config/: AMS.mk  config.h  config_application_loader.cpp  config_application_loader.h  config_converter.cpp  config_converter.h  config_decode_loader.cpp  config_decode_loader.h  config_encode_loader.cpp  config_encode_loader.h  config_host_loader.cpp  config_host_loader.h  config_loader.cpp  config_loader.h  config_logger_loader.cpp  config_logger_loader.h  config_manager.cpp  config_manager.h  config_private.h  config_provider_loader.cpp  config_provider_loader.h  config_publisher_loader.cpp  config_publisher_loader.h  config_server_loader.cpp  config_server_loader.h  item.cpp  item.h  value.cpp  value.h  value_base.cpp  value_base.h  value_container.h  value_for_bool.h  value_for_float.h  value_for_int.h  value_for_item.h  value_for_list.cpp  (+4 more)
streaming/: hls-mpeg-dash.md  tls-encryption.md  webrtc-publishing.md
(+2534 files in other folders)
