cmake_minimum_required(VERSION 3.13)
project(OvenMediaEngine)

set(CMAKE_CXX_STANDARD 14)

include_directories(src/projects)
include_directories(src/projects/base)
include_directories(src/projects/base/application)
include_directories(src/projects/base/media_route)
include_directories(src/projects/base/ovcrypto)
include_directories(src/projects/base/ovcrypto/openssl)
include_directories(src/projects/base/ovlibrary)
include_directories(src/projects/base/ovsocket)
include_directories(src/projects/base/provider)
include_directories(src/projects/base/publisher)
include_directories(src/projects/config)
include_directories(src/projects/config/items)
include_directories(src/projects/config/utilities)
include_directories(src/projects/dtls_srtp)
include_directories(src/projects/http_server)
include_directories(src/projects/http_server/interceptors)
include_directories(src/projects/http_server/interceptors/default)
include_directories(src/projects/http_server/interceptors/web_socket)
include_directories(src/projects/ice)
include_directories(src/projects/ice/stun)
include_directories(src/projects/ice/stun/attributes)
include_directories(src/projects/main)
include_directories(src/projects/media_router)
include_directories(src/projects/media_router/bitstream)
include_directories(src/projects/physical_port)
include_directories(src/projects/relay)
include_directories(src/projects/rtc_signalling)
include_directories(src/projects/rtmp)
include_directories(src/projects/rtmp/chunk)
include_directories(src/projects/rtp_rtcp)
include_directories(src/projects/sdp)
include_directories(src/projects/segment_stream)
include_directories(src/projects/segment_stream/packetyzer)
include_directories(src/projects/third_party/jsoncpp-1.8.4/json)
include_directories(src/projects/third_party/pugixml-1.9/contrib)
include_directories(src/projects/third_party/pugixml-1.9/src)
include_directories(src/projects/third_party/sqlite-3.22.0)
include_directories(src/projects/transcode)
include_directories(src/projects/transcode/codec)
include_directories(src/projects/transcode/codec/include)
include_directories(src/projects/transcode/filter)
include_directories(src/projects/webrtc)

add_custom_target(OvenMediaEngine COMMAND make -C ${PROJECT_SOURCE_DIR}/src)
add_custom_target(OvenMediaEngine-clean COMMAND make clean -C ${PROJECT_SOURCE_DIR}/src)


add_executable(OvenMediaEngine-Source
        src/projects/base/application/AMS.mk
        src/projects/base/application/application.h
        src/projects/base/application/application_private.h
        src/projects/base/application/audio_track.cpp
        src/projects/base/application/audio_track.h
        src/projects/base/application/logger_tag_info.cpp
        src/projects/base/application/logger_tag_info.h
        src/projects/base/application/media_track.cpp
        src/projects/base/application/media_track.h
        src/projects/base/application/session_info.cpp
        src/projects/base/application/session_info.h
        src/projects/base/application/stream.cpp
        src/projects/base/application/stream.h
        src/projects/base/application/stream_info.cpp
        src/projects/base/application/stream_info.h
        src/projects/base/application/video_track.cpp
        src/projects/base/application/video_track.h
        src/projects/base/media_route/media_buffer.h
        src/projects/base/media_route/media_queue.h
        src/projects/base/media_route/media_route_application_connector.h
        src/projects/base/media_route/media_route_application_interface.h
        src/projects/base/media_route/media_route_application_observer.h
        src/projects/base/media_route/media_route_interface.h
        src/projects/base/media_route/media_type.h
        src/projects/base/ovcrypto/openssl/openssl_manager.cpp
        src/projects/base/ovcrypto/openssl/openssl_manager.h
        src/projects/base/ovcrypto/openssl/tls.cpp
        src/projects/base/ovcrypto/openssl/tls.h
        src/projects/base/ovcrypto/AMS.mk
        src/projects/base/ovcrypto/base_64.cpp
        src/projects/base/ovcrypto/base_64.h
        src/projects/base/ovcrypto/certificate.cpp
        src/projects/base/ovcrypto/certificate.h
        src/projects/base/ovcrypto/crc_32.cpp
        src/projects/base/ovcrypto/crc_32.h
        src/projects/base/ovcrypto/message_digest.cpp
        src/projects/base/ovcrypto/message_digest.h
        src/projects/base/ovcrypto/ovcrypto.h
        src/projects/base/ovcrypto/ovcrypto_private.h
        src/projects/base/ovlibrary/AMS.mk
        src/projects/base/ovlibrary/assert.cpp
        src/projects/base/ovlibrary/assert.h
        src/projects/base/ovlibrary/byte_io.h
        src/projects/base/ovlibrary/byte_ordering.h
        src/projects/base/ovlibrary/byte_stream.cpp
        src/projects/base/ovlibrary/byte_stream.h
        src/projects/base/ovlibrary/converter.h
        src/projects/base/ovlibrary/data.cpp
        src/projects/base/ovlibrary/data.h
        src/projects/base/ovlibrary/delay_queue.cpp
        src/projects/base/ovlibrary/delay_queue.h
        src/projects/base/ovlibrary/dump_utilities.cpp
        src/projects/base/ovlibrary/dump_utilities.h
        src/projects/base/ovlibrary/enable_shared_from_this.h
        src/projects/base/ovlibrary/error.cpp
        src/projects/base/ovlibrary/error.h
        src/projects/base/ovlibrary/event.cpp
        src/projects/base/ovlibrary/event.h
        src/projects/base/ovlibrary/json.cpp
        src/projects/base/ovlibrary/json.h
        src/projects/base/ovlibrary/json_object.cpp
        src/projects/base/ovlibrary/json_object.h
        src/projects/base/ovlibrary/log.cpp
        src/projects/base/ovlibrary/log.h
        src/projects/base/ovlibrary/log_internal.h
        src/projects/base/ovlibrary/memory_utilities.h
        src/projects/base/ovlibrary/ovdata_structure.h
        src/projects/base/ovlibrary/ovlibrary.h
        src/projects/base/ovlibrary/ovlibrary.h.gch
        src/projects/base/ovlibrary/ovlibrary_private.h
        src/projects/base/ovlibrary/path_manager.cpp
        src/projects/base/ovlibrary/path_manager.h
        src/projects/base/ovlibrary/pcm_utilities.cpp
        src/projects/base/ovlibrary/pcm_utilities.h
        src/projects/base/ovlibrary/platform.cpp
        src/projects/base/ovlibrary/platform.h
        src/projects/base/ovlibrary/random.cpp
        src/projects/base/ovlibrary/random.h
        src/projects/base/ovlibrary/semaphore.cpp
        src/projects/base/ovlibrary/semaphore.h
        src/projects/base/ovlibrary/singleton.h
        src/projects/base/ovlibrary/stack_trace.cpp
        src/projects/base/ovlibrary/stack_trace.h
        src/projects/base/ovlibrary/string.cpp
        src/projects/base/ovlibrary/string.h
        src/projects/base/ovsocket/AMS.mk
        src/projects/base/ovsocket/client_socket.cpp
        src/projects/base/ovsocket/client_socket.h
        src/projects/base/ovsocket/datagram_socket.cpp
        src/projects/base/ovsocket/datagram_socket.h
        src/projects/base/ovsocket/ovsocket.h
        src/projects/base/ovsocket/server_socket.cpp
        src/projects/base/ovsocket/server_socket.h
        src/projects/base/ovsocket/socket.cpp
        src/projects/base/ovsocket/socket.h
        src/projects/base/ovsocket/socket_address.cpp
        src/projects/base/ovsocket/socket_address.h
        src/projects/base/ovsocket/socket_datastructure.h
        src/projects/base/ovsocket/socket_private.h
        src/projects/base/provider/AMS.mk
        src/projects/base/provider/application.cpp
        src/projects/base/provider/application.h
        src/projects/base/provider/provider.cpp
        src/projects/base/provider/provider.h
        src/projects/base/provider/stream.cpp
        src/projects/base/provider/stream.h
        src/projects/base/publisher/AMS.mk
        src/projects/base/publisher/application.cpp
        src/projects/base/publisher/application.h
        src/projects/base/publisher/publisher.cpp
        src/projects/base/publisher/publisher.h
        src/projects/base/publisher/publisher_private.h
        src/projects/base/publisher/session.cpp
        src/projects/base/publisher/session.h
        src/projects/base/publisher/session_node.cpp
        src/projects/base/publisher/session_node.h
        src/projects/base/publisher/stream.cpp
        src/projects/base/publisher/stream.h
        src/projects/base/AMS.mk
        src/projects/base/common_types.h
        src/projects/config/items/application.h
        src/projects/config/items/applications.h
        src/projects/config/items/audio_profile.h
        src/projects/config/items/dash_publisher.h
        src/projects/config/items/data_structure.h
        src/projects/config/items/decode.h
        src/projects/config/items/decode_video.h
        src/projects/config/items/encode.h
        src/projects/config/items/encodes.h
        src/projects/config/items/hls_publisher.h
        src/projects/config/items/host.h
        src/projects/config/items/hosts.h
        src/projects/config/items/items.h
        src/projects/config/items/origin.h
        src/projects/config/items/provider.h
        src/projects/config/items/providers.h
        src/projects/config/items/publisher.h
        src/projects/config/items/publishers.h
        src/projects/config/items/rtmp_provider.h
        src/projects/config/items/rtmp_publisher.h
        src/projects/config/items/server.h
        src/projects/config/items/signalling.h
        src/projects/config/items/stream.h
        src/projects/config/items/stream_profile.h
        src/projects/config/items/stream_profiles.h
        src/projects/config/items/streams.h
        src/projects/config/items/tls.h
        src/projects/config/items/url.h
        src/projects/config/items/urls.h
        src/projects/config/items/video_profile.h
        src/projects/config/items/webrtc_publisher.h
        src/projects/config/utilities/config_macro_converter.cpp
        src/projects/config/utilities/config_macro_converter.h
        src/projects/config/utilities/config_utility.cpp
        src/projects/config/utilities/config_utility.h
        src/projects/config/AMS.mk
        src/projects/config/config.h
        src/projects/config/config.h.gch
        src/projects/config/config_loader.cpp
        src/projects/config/config_loader.h
        src/projects/config/config_logger_loader.cpp
        src/projects/config/config_logger_loader.h
        src/projects/config/config_manager.cpp
        src/projects/config/config_manager.h
        src/projects/config/config_private.h
        src/projects/config/item.cpp
        src/projects/config/item.h
        src/projects/config/value.cpp
        src/projects/config/value.h
        src/projects/config/value_base.cpp
        src/projects/config/value_base.h
        src/projects/dtls_srtp/AMS.mk
        src/projects/dtls_srtp/dtls_ice_transport.cpp
        src/projects/dtls_srtp/dtls_ice_transport.h
        src/projects/dtls_srtp/dtls_transport.cpp
        src/projects/dtls_srtp/dtls_transport.h
        src/projects/dtls_srtp/srtp_adapter.cpp
        src/projects/dtls_srtp/srtp_adapter.h
        src/projects/dtls_srtp/srtp_transport.cpp
        src/projects/dtls_srtp/srtp_transport.h
        src/projects/http_server/interceptors/default/http_default_interceptor.cpp
        src/projects/http_server/interceptors/default/http_default_interceptor.h
        src/projects/http_server/interceptors/web_socket/web_socket_datastructure.h
        src/projects/http_server/interceptors/web_socket/web_socket_frame.cpp
        src/projects/http_server/interceptors/web_socket/web_socket_frame.h
        src/projects/http_server/interceptors/web_socket/web_socket_interceptor.cpp
        src/projects/http_server/interceptors/web_socket/web_socket_interceptor.h
        src/projects/http_server/interceptors/web_socket/web_socket_request.cpp
        src/projects/http_server/interceptors/web_socket/web_socket_request.h
        src/projects/http_server/interceptors/web_socket/web_socket_response.cpp
        src/projects/http_server/interceptors/web_socket/web_socket_response.h
        src/projects/http_server/interceptors/http_request_interceptor.cpp
        src/projects/http_server/interceptors/http_request_interceptor.h
        src/projects/http_server/interceptors/http_request_interceptors.h
        src/projects/http_server/AMS.mk
        src/projects/http_server/http_client.cpp
        src/projects/http_server/http_client.h
        src/projects/http_server/http_datastructure.h
        src/projects/http_server/http_private.h
        src/projects/http_server/http_request.cpp
        src/projects/http_server/http_request.h
        src/projects/http_server/http_response.cpp
        src/projects/http_server/http_response.h
        src/projects/http_server/http_server.cpp
        src/projects/http_server/http_server.h
        src/projects/http_server/https_server.cpp
        src/projects/http_server/https_server.h
        src/projects/ice/stun/attributes/stun_attribute.cpp
        src/projects/ice/stun/attributes/stun_attribute.h
        src/projects/ice/stun/attributes/stun_attributes.h
        src/projects/ice/stun/attributes/stun_fingerprint_attribute.cpp
        src/projects/ice/stun/attributes/stun_fingerprint_attribute.h
        src/projects/ice/stun/attributes/stun_mapped_address_attribute.cpp
        src/projects/ice/stun/attributes/stun_mapped_address_attribute.h
        src/projects/ice/stun/attributes/stun_message_integrity_attribute.cpp
        src/projects/ice/stun/attributes/stun_message_integrity_attribute.h
        src/projects/ice/stun/attributes/stun_unknown_attribute.cpp
        src/projects/ice/stun/attributes/stun_unknown_attribute.h
        src/projects/ice/stun/attributes/stun_user_name_attribute.cpp
        src/projects/ice/stun/attributes/stun_user_name_attribute.h
        src/projects/ice/stun/attributes/stun_xor_mapped_address_attribute.cpp
        src/projects/ice/stun/attributes/stun_xor_mapped_address_attribute.h
        src/projects/ice/stun/stun_datastructure.h
        src/projects/ice/stun/stun_message.cpp
        src/projects/ice/stun/stun_message.h
        src/projects/ice/AMS.mk
        src/projects/ice/ice.h
        src/projects/ice/ice_candidate.cpp
        src/projects/ice/ice_candidate.h
        src/projects/ice/ice_port.cpp
        src/projects/ice/ice_port.h
        src/projects/ice/ice_port_manager.cpp
        src/projects/ice/ice_port_manager.h
        src/projects/ice/ice_port_observer.h
        src/projects/ice/ice_private.h
        src/projects/main/AMS.mk
        src/projects/main/main.cpp
        src/projects/main/main.h
        src/projects/media_router/bitstream/bitstream_to_adts.cpp
        src/projects/media_router/bitstream/bitstream_to_adts.h
        src/projects/media_router/bitstream/bitstream_to_annexa.cpp
        src/projects/media_router/bitstream/bitstream_to_annexa.h
        src/projects/media_router/bitstream/bitstream_to_annexb.cpp
        src/projects/media_router/bitstream/bitstream_to_annexb.h
        src/projects/media_router/AMS.mk
        src/projects/media_router/media_route_application.cpp
        src/projects/media_router/media_route_application.h
        src/projects/media_router/media_route_stream.cpp
        src/projects/media_router/media_route_stream.h
        src/projects/media_router/media_router.cpp
        src/projects/media_router/media_router.h
        src/projects/physical_port/AMS.mk
        src/projects/physical_port/physical_port.cpp
        src/projects/physical_port/physical_port.h
        src/projects/physical_port/physical_port_manager.cpp
        src/projects/physical_port/physical_port_manager.h
        src/projects/physical_port/physical_port_observer.h
        src/projects/relay/AMS.mk
        src/projects/relay/relay.h
        src/projects/relay/relay_client.cpp
        src/projects/relay/relay_client.h
        src/projects/relay/relay_datastructure.h
        src/projects/relay/relay_private.h
        src/projects/relay/relay_server.cpp
        src/projects/relay/relay_server.h
        src/projects/rtc_signalling/AMS.mk
        src/projects/rtc_signalling/rtc_ice_candidate.cpp
        src/projects/rtc_signalling/rtc_ice_candidate.h
        src/projects/rtc_signalling/rtc_signalling.h
        src/projects/rtc_signalling/rtc_signalling_observer.h
        src/projects/rtc_signalling/rtc_signalling_server.cpp
        src/projects/rtc_signalling/rtc_signalling_server.h
        src/projects/rtc_signalling/rtc_signalling_server_private.h
        src/projects/rtmp/chunk/amf_document.cpp
        src/projects/rtmp/chunk/amf_document.h
        src/projects/rtmp/chunk/rtmp_define.h
        src/projects/rtmp/chunk/rtmp_export_chunk.cpp
        src/projects/rtmp/chunk/rtmp_export_chunk.h
        src/projects/rtmp/chunk/rtmp_handshake.cpp
        src/projects/rtmp/chunk/rtmp_handshake.h
        src/projects/rtmp/chunk/rtmp_import_chunk.cpp
        src/projects/rtmp/chunk/rtmp_import_chunk.h
        src/projects/rtmp/chunk/rtmp_mux_util.cpp
        src/projects/rtmp/chunk/rtmp_mux_util.h
        src/projects/rtmp/AMS.mk
        src/projects/rtmp/rtmp_application.cpp
        src/projects/rtmp/rtmp_application.h
        src/projects/rtmp/rtmp_chunk_log_define.h
        src/projects/rtmp/rtmp_chunk_stream.cpp
        src/projects/rtmp/rtmp_chunk_stream.h
        src/projects/rtmp/rtmp_observer.h
        src/projects/rtmp/rtmp_provider.cpp
        src/projects/rtmp/rtmp_provider.h
        src/projects/rtmp/rtmp_server.cpp
        src/projects/rtmp/rtmp_server.h
        src/projects/rtmp/rtmp_stream.cpp
        src/projects/rtmp/rtmp_stream.h
        src/projects/rtp_rtcp/AMS.mk
        src/projects/rtp_rtcp/rtcp_packet.cpp
        src/projects/rtp_rtcp/rtcp_packet.h
        src/projects/rtp_rtcp/rtp_packet.cpp
        src/projects/rtp_rtcp/rtp_packet.h
        src/projects/rtp_rtcp/rtp_packetizing_manager.cpp
        src/projects/rtp_rtcp/rtp_packetizing_manager.h
        src/projects/rtp_rtcp/rtp_packetizer_h264.cpp
        src/projects/rtp_rtcp/rtp_packetizer_h264.h
        src/projects/rtp_rtcp/rtp_packetizer_vp8.cpp
        src/projects/rtp_rtcp/rtp_packetizer_vp8.h
        src/projects/rtp_rtcp/rtp_rtcp.cpp
        src/projects/rtp_rtcp/rtp_rtcp.h
        src/projects/rtp_rtcp/rtp_rtcp_defines.h
        src/projects/rtp_rtcp/rtp_rtcp_interface.h
        src/projects/rtp_rtcp/rtp_packetizer.cpp
        src/projects/rtp_rtcp/rtp_packetizer.h
        src/projects/sdp/AMS.mk
        src/projects/sdp/common_attr.cpp
        src/projects/sdp/common_attr.h
        src/projects/sdp/media_description.cpp
        src/projects/sdp/media_description.h
        src/projects/sdp/payload_attr.cpp
        src/projects/sdp/payload_attr.h
        src/projects/sdp/sdp_base.h
        src/projects/sdp/session_description.cpp
        src/projects/sdp/session_description.h
        src/projects/segment_stream/packetyzer/bit_writer.cpp
        src/projects/segment_stream/packetyzer/bit_writer.h
        src/projects/segment_stream/packetyzer/dash_packetyzer.cpp
        src/projects/segment_stream/packetyzer/dash_packetyzer.h
        src/projects/segment_stream/packetyzer/hls_packetyzer.cpp
        src/projects/segment_stream/packetyzer/hls_packetyzer.h
        src/projects/segment_stream/packetyzer/m4s_fragment_writer.cpp
        src/projects/segment_stream/packetyzer/m4s_fragment_writer.h
        src/projects/segment_stream/packetyzer/m4s_init_writer.cpp
        src/projects/segment_stream/packetyzer/m4s_init_writer.h
        src/projects/segment_stream/packetyzer/m4s_writer.cpp
        src/projects/segment_stream/packetyzer/m4s_writer.h
        src/projects/segment_stream/packetyzer/packetyzer.cpp
        src/projects/segment_stream/packetyzer/packetyzer.h
        src/projects/segment_stream/packetyzer/packetyzer_define.h
        src/projects/segment_stream/packetyzer/ts_writer.cpp
        src/projects/segment_stream/packetyzer/ts_writer.h
        src/projects/segment_stream/AMS.mk
        src/projects/segment_stream/segment_stream.cpp
        src/projects/segment_stream/segment_stream.h
        src/projects/segment_stream/segment_stream_application.cpp
        src/projects/segment_stream/segment_stream_application.h
        src/projects/segment_stream/segment_stream_interceptor.cpp
        src/projects/segment_stream/segment_stream_interceptor.h
        src/projects/segment_stream/segment_stream_observer.h
        src/projects/segment_stream/segment_stream_publisher.cpp
        src/projects/segment_stream/segment_stream_publisher.h
        src/projects/segment_stream/segment_stream_server.cpp
        src/projects/segment_stream/segment_stream_server.h
        src/projects/segment_stream/stream_packetyzer.cpp
        src/projects/segment_stream/stream_packetyzer.h
        src/projects/third_party/jsoncpp-1.8.4/json/json-forwards.h
        src/projects/third_party/jsoncpp-1.8.4/json/json.h
        src/projects/third_party/jsoncpp-1.8.4/jsoncpp.cpp
        src/projects/third_party/pugixml-1.9/contrib/foreach.hpp
        src/projects/third_party/pugixml-1.9/docs/images/dom_tree.png
        src/projects/third_party/pugixml-1.9/docs/images/vs2005_link1.png
        src/projects/third_party/pugixml-1.9/docs/images/vs2005_link2.png
        src/projects/third_party/pugixml-1.9/docs/images/vs2005_pch1.png
        src/projects/third_party/pugixml-1.9/docs/images/vs2005_pch2.png
        src/projects/third_party/pugixml-1.9/docs/images/vs2005_pch3.png
        src/projects/third_party/pugixml-1.9/docs/images/vs2005_pch4.png
        src/projects/third_party/pugixml-1.9/docs/images/vs2010_link1.png
        src/projects/third_party/pugixml-1.9/docs/images/vs2010_link2.png
        src/projects/third_party/pugixml-1.9/docs/samples/character.xml
        src/projects/third_party/pugixml-1.9/docs/samples/custom_memory_management.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/include.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/load_error_handling.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/load_file.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/load_memory.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/load_options.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/load_stream.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/modify_add.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/modify_base.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/modify_remove.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/save_custom_writer.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/save_declaration.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/save_file.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/save_options.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/save_stream.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/save_subtree.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/text.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/transitions.xml
        src/projects/third_party/pugixml-1.9/docs/samples/traverse_base.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/traverse_iter.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/traverse_predicate.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/traverse_rangefor.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/traverse_walker.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/tree.xml
        src/projects/third_party/pugixml-1.9/docs/samples/weekly-shift_jis.xml
        src/projects/third_party/pugixml-1.9/docs/samples/weekly-utf-16.xml
        src/projects/third_party/pugixml-1.9/docs/samples/weekly-utf-8.xml
        src/projects/third_party/pugixml-1.9/docs/samples/xgconsole.xml
        src/projects/third_party/pugixml-1.9/docs/samples/xpath_error.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/xpath_query.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/xpath_select.cpp
        src/projects/third_party/pugixml-1.9/docs/samples/xpath_variables.cpp
        src/projects/third_party/pugixml-1.9/docs/manual.html
        src/projects/third_party/pugixml-1.9/docs/quickstart.html
        src/projects/third_party/pugixml-1.9/scripts/gmake/Release/pugixml.d
        src/projects/third_party/pugixml-1.9/scripts/gmake/Release/pugixml.o
        src/projects/third_party/pugixml-1.9/scripts/gmake/libpugixml.a
        src/projects/third_party/pugixml-1.9/scripts/nuget/build/native/pugixml-propertiesui.xml
        src/projects/third_party/pugixml-1.9/scripts/nuget/build/native/pugixml.targets
        src/projects/third_party/pugixml-1.9/scripts/nuget/pugixml.nuspec
        src/projects/third_party/pugixml-1.9/scripts/pugixml.xcodeproj/project.pbxproj
        src/projects/third_party/pugixml-1.9/scripts/cocoapods_push.sh
        src/projects/third_party/pugixml-1.9/scripts/Makefile
        src/projects/third_party/pugixml-1.9/scripts/nuget_build.ps1
        src/projects/third_party/pugixml-1.9/scripts/premake4.lua
        src/projects/third_party/pugixml-1.9/scripts/pugixml.make
        src/projects/third_party/pugixml-1.9/scripts/pugixml.pc.in
        src/projects/third_party/pugixml-1.9/scripts/pugixml.podspec
        src/projects/third_party/pugixml-1.9/scripts/pugixml_airplay.mkf
        src/projects/third_party/pugixml-1.9/scripts/pugixml_codeblocks.cbp
        src/projects/third_party/pugixml-1.9/scripts/pugixml_codelite.project
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2005.vcproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2005_static.vcproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2008.vcproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2008_static.vcproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2010.vcxproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2010_static.vcxproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2013.vcxproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2013_static.vcxproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2015.vcxproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2015_static.vcxproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2017.vcxproj
        src/projects/third_party/pugixml-1.9/scripts/pugixml_vs2017_static.vcxproj
        src/projects/third_party/pugixml-1.9/src/pugiconfig.hpp
        src/projects/third_party/pugixml-1.9/src/pugixml.cpp
        src/projects/third_party/pugixml-1.9/src/pugixml.hpp
        src/projects/third_party/pugixml-1.9/readme.txt
        src/projects/third_party/sqlite-3.22.0/shell.c
        src/projects/third_party/sqlite-3.22.0/sqlite3.c
        src/projects/third_party/sqlite-3.22.0/sqlite3.h
        src/projects/third_party/sqlite-3.22.0/sqlite3ext.h
        src/projects/third_party/AMS-jsoncpp.mk
        src/projects/third_party/AMS-pugixml.mk
        src/projects/third_party/AMS-sqlite.mk
        src/projects/third_party/AMS.mk
        src/projects/transcode/codec/include/codec_api.h
        src/projects/transcode/codec/include/codec_app_def.h
        src/projects/transcode/codec/include/codec_def.h
        src/projects/transcode/codec/transcode_base.cpp
        src/projects/transcode/codec/transcode_base.h
        src/projects/transcode/codec/transcode_codec_dec_aac.cpp
        src/projects/transcode/codec/transcode_codec_dec_aac.h
        src/projects/transcode/codec/transcode_codec_dec_avc.cpp
        src/projects/transcode/codec/transcode_codec_dec_avc.h
        src/projects/transcode/codec/transcode_codec_enc_aac.cpp
        src/projects/transcode/codec/transcode_codec_enc_aac.h
        src/projects/transcode/codec/transcode_codec_enc_avc.cpp
        src/projects/transcode/codec/transcode_codec_enc_avc.h
        src/projects/transcode/codec/transcode_codec_enc_opus.cpp
        src/projects/transcode/codec/transcode_codec_enc_opus.h
        src/projects/transcode/codec/transcode_codec_enc_vp8.cpp
        src/projects/transcode/codec/transcode_codec_enc_vp8.h
        src/projects/transcode/codec/transcode_decoder.cpp
        src/projects/transcode/codec/transcode_decoder.h
        src/projects/transcode/codec/transcode_encoder.cpp
        src/projects/transcode/codec/transcode_encoder.h
        src/projects/transcode/filter/media_filter_impl.h
        src/projects/transcode/filter/media_filter_resampler.cpp
        src/projects/transcode/filter/media_filter_resampler.h
        src/projects/transcode/filter/media_filter_rescaler.cpp
        src/projects/transcode/filter/media_filter_rescaler.h
        src/projects/transcode/AMS.mk
        src/projects/transcode/transcode_application.cpp
        src/projects/transcode/transcode_application.h
        src/projects/transcode/transcode_context.cpp
        src/projects/transcode/transcode_context.h
        src/projects/transcode/transcode_filter.cpp
        src/projects/transcode/transcode_filter.h
        src/projects/transcode/transcode_stream.cpp
        src/projects/transcode/transcode_stream.h
        src/projects/transcode/transcoder.cpp
        src/projects/transcode/transcoder.h
        src/projects/transcode/utilities.cpp
        src/projects/transcode/utilities.h
        src/projects/webrtc/AMS.mk
        src/projects/webrtc/rtc_application.cpp
        src/projects/webrtc/rtc_application.h
        src/projects/webrtc/rtc_private.h
        src/projects/webrtc/rtc_session.cpp
        src/projects/webrtc/rtc_session.h
        src/projects/webrtc/rtc_stream.cpp
        src/projects/webrtc/rtc_stream.h
        src/projects/webrtc/webrtc_publisher.cpp
        src/projects/webrtc/webrtc_publisher.h
        src/projects/AMS.mk src/projects/rtp_rtcp/ulpfec_generator.cpp src/projects/rtp_rtcp/ulpfec_generator.h src/projects/rtp_rtcp/red_rtp_packet.cpp src/projects/rtp_rtcp/red_rtp_packet.h)
